<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".Welcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="00dp"
            android:text="@string/lets_get_started"
            android:textAlignment="center"
            android:textColor="@color/button"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:textStyle="bold"/>


        <Button style="@style/ButtonColour"
            android:id="@+id/start_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/get_started" />


    </LinearLayout>


</RelativeLayout>