<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/hello_text"
            android:layout_width="319dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />


<!--        <EditText-->
<!--            android:id="@+id/firstname"-->
<!--            android:layout_width="319dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:autofillHints="username"-->
<!--            android:background="@drawable/rounded_corner"-->
<!--            android:hint="@string/firstname"-->
<!--            android:inputType="text"-->
<!--            android:padding="15dp"-->
<!--            android:textColor="@color/black"-->
<!--            android:textColorHint="@color/black"-->
<!--            android:textSize="20sp" />-->

<!--        <EditText-->
<!--            android:id="@+id/lastname"-->
<!--            android:layout_width="319dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:autofillHints="password"-->
<!--            android:background="@drawable/rounded_corner"-->
<!--            android:hint="@string/lastname"-->
<!--            android:inputType="text"-->
<!--            android:padding="15dp"-->
<!--            android:textColor="@color/black"-->
<!--            android:textColorHint="@color/black"-->
<!--            android:textSize="20sp" />-->
<!--        -->

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_corner"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

<!--        <EditText-->
<!--            android:id="@+id/confirmPassword"-->
<!--            android:layout_width="319dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:autofillHints="password"-->
<!--            android:background="@drawable/rounded_corner"-->
<!--            android:hint="@string/confirm_password"-->
<!--            android:inputType="textPassword"-->
<!--            android:padding="15dp"-->
<!--            android:textColor="@color/black"-->
<!--            android:textColorHint="@color/black"-->
<!--            android:textSize="20sp" />-->

        <Button style="@style/ButtonColour"
            android:id="@+id/registerButton"
            android:layout_width="312dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/register_btn_text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loginRedirectText"
            android:layout_width="312dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>


</ScrollView>